tests/ui/proc-macro/inner-attr-file-mod-diagnostics.stderr
error[E0425]: cannot find function `g` in this scope
  --> $DIR/auxiliary/inner_attr_file_mod_diagnostics_child.rs:4:5
   |
LL |     g()
   |     ^ not found in this scope

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0425`.
